Event caching